# TidopWidgets

./: CMakeLists.txt  README.md  main.cpp
scripts/: generate_widgets.py
scripts/templates/: widget_template.cpp  widget_template.h
src/: CMakeLists.txt
src/TWidgets/: CMakeLists.txt  TidopWidget.h
src/TWidgets/BasicWidgets/: CMakeLists.txt  SizeWidget.cpp  SizeWidget.h
src/TWidgets/RasterFilters/: BilateralFilterWidget.cpp  BilateralFilterWidget.h  CMakeLists.txt
